# sys-verif-materials

./: .editorconfig  .gitignore  .gitignore-student  Makefile  README-student.md  README.md  _RocqProject  apply_fixes.py  fix.txt  sys-verif.opam
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
dafny/: proofs.dfy  triggers.dfy
etc/: check-assignments.sh  prepare-submit  template  untar-hw  untar-submissions  update-goose.sh  update-lf.sh
go/: go.mod  go.sum
go/concurrent/: concurrent.go  concurrent_test.go  examples.go
go/concurrent/barrier/: barrier.go  barrier_test.go
go/functional/: functional.go
go/heap/: binary_search.go  binary_search_test.go  exercises.go  heap.go  heap_test.go  majority_vote.go  majority_vote_test.go  queue_internal_test.go  queue_test.go  search_tree.go  struct.go
go/heap/linked_list/: linked_list.go  linked_list_test.go
go/memoize/: memoize.go
go/sharded_hashmap/: sharded_hashmap.go
src/code/sys_verif_code/: algo.v  concurrent.v  (+5 more)
src/software_foundations/: AltAuto.v  Auto.v  Basics.v  Bib.v  Extraction.v  Imp.v  ImpCEvalFun.v  ImpParser.v  IndPrinciples.v  IndProp.v  Induction.v  Lists.v  Logic.v  Maps.v  Poly.v  Postscript.v  Preface.v  ProofObjects.v  Rel.v  Tactics.v
src/sys_verif/: options.v
template/: Cargo.toml  README.md
template/src/: app.rs  assignment.rs  debug_print.rs  demo_print.rs  literate.rs  main.rs  student_repo.rs  website.rs
template/src/coq/: cache.rs  coqc.rs  mod.rs  parse.rs
template/src/snapshots/: template__assignment__tests__assignment_exercise.v.snap  template__assignment__tests__assignment_solution.v.snap  template__literate__tests__intro.md.snap  template__literate__tests__ltac.md.snap
template/src/template/: mod.rs  output.rs  parse.rs
template/tests/examples/: assignment.v  intro.v  ltac.v
(+61 files in other folders)
