[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.56", features = ["derive"] }
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.3"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
shell-words = "1.1.1"
similar = "2.7.0"
tempdir = "0.3.7"
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.46.2", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
